Custom--app/main/default/objects/File_Storage_Type__c/File_Storage_Type__c.object-meta.xml
<CustomObject>
    <description>This will be used as part of the File Storage (S3) application.</description>
    <label>File Storage Type</label>
    <nameField>
        <label>File Storage Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Storage Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>