Custom--app/main/default/objects/File_Storage_Type__c/fields/Allowed_For_Objects__c.field-meta.xml
<CustomField>
    <fullName>Allowed_For_Objects__c</fullName>
    <label>Allowed For Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disposition__c</fullName>
            </value>
            <value>
                <fullName>HD_Budget_Walk__c</fullName>
            </value>
            <value>
                <fullName>Property__c</fullName>
            </value>
            <value>
                <fullName>Rehab__c</fullName>
            </value>
            <value>
                <fullName>Residence__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>