Custom--app/main/default/objects/File_Storage_Type__c/fields/Folder_Access__c.field-meta.xml
<CustomField>
    <fullName>Folder_Access__c</fullName>
    <description>When the folder is created on S3, this flag determines if it will be Public (Read Only) or Private to Invitation Homes thru Salesforce only.  Note that all internal users that have access to the record will have write access whether or not it is set at Public/Private.  This is only so external folks may view files in that folder.</description>
    <label>Folder Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Custom?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>