Custom--app/main/default/objects/File_Storage_Type__c/fields/MetaData_Record__c.field-meta.xml
<CustomField>
    <fullName>MetaData_Record__c</fullName>
    <label>MetaData Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File_Storage_Record__c</fullName>
            </value>
            <value>
                <fullName>Photo_Storage_Record__c</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>