Custom--app/main/default/objects/File_Storage_Type__c/fields/Upload_To_SFN__c.field-meta.xml
<CustomField>
    <fullName>Upload_To_SFN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether files of this type should be uploaded to Structured FN</description>
    <inlineHelpText>Whether files of this type should be uploaded to Structured FN.  Note that this only works for Portfolio docs, and care should be taken so that only the docs that our lender cares about are uploaded.</inlineHelpText>
    <label>Upload To SFN</label>
    <type>Checkbox</type>
</CustomField>