Custom--app/main/default/objects/File_Storage_Type__c/fields/Url_Expiration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Url_Expiration_Minutes__c</fullName>
    <defaultValue>60</defaultValue>
    <description>The number of minutes that URLs related to this filetype are active.  If the value is zero or blank, then the URL never expires.</description>
    <inlineHelpText>The number of minutes that URLs related to this filetype are active.  If the value is zero or blank, then the URL never expires.</inlineHelpText>
    <label>Url Expiration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>