Custom--app/main/default/objects/File_Storage_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allowed_For_Objects__c</columns>
    <columns>Url_Expiration_Minutes__c</columns>
    <columns>Upload_To_SFN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>