Custom--app/main/default/objects/File_Storage_Type__c/listViews/Disposition_Filetypes.listView-meta.xml
<ListView>
    <fullName>Disposition_Filetypes</fullName>
    <columns>NAME</columns>
    <columns>Allowed_For_Objects__c</columns>
    <columns>Url_Expiration_Minutes__c</columns>
    <columns>Upload_To_SFN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allowed_For_Objects__c</field>
        <operation>includes</operation>
        <value>Disposition__c</value>
    </filters>
    <label>Disposition File Types</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>