Custom--app/main/default/objects/File_Storage_Type__c/listViews/Portfolio_Filetypes_Upload_Queues.listView-meta.xml
<ListView>
    <fullName>Portfolio_Filetypes_Upload_Queues</fullName>
    <columns>NAME</columns>
    <columns>Allowed_For_Objects__c</columns>
    <columns>Url_Expiration_Minutes__c</columns>
    <columns>Upload_To_SFN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allowed_For_Objects__c</field>
        <operation>includes</operation>
        <value>Property__c</value>
    </filters>
    <filters>
        <field>Upload_To_SFN__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Portfolio Filetypes for Upload Queues</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>