Custom--app/main/default/objects/File_Storage_Type__c/listViews/Residence_Filetypes.listView-meta.xml
<ListView>
    <fullName>Residence_Filetypes</fullName>
    <columns>NAME</columns>
    <columns>Allowed_For_Objects__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Allowed_For_Objects__c</field>
        <operation>includes</operation>
        <value>Residence__c</value>
    </filters>
    <label>Residence Filetypes</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>