Custom--app/main/default/objects/File_Storage_Type__c/listViews/Upload_to_SFN.listView-meta.xml
<ListView>
    <fullName>Upload_to_SFN</fullName>
    <columns>NAME</columns>
    <columns>Allowed_For_Objects__c</columns>
    <columns>Url_Expiration_Minutes__c</columns>
    <columns>Upload_To_SFN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Upload_To_SFN__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Upload to SFN</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>